<resources>
    <string name="str_confirm">确定</string>
    <string name="sm_cancel">取消</string>
    <string name="str_update">更新</string>
    <string name="str_ignore">忽略</string>
    <string name="str_refresh">刷新</string>
    <string name="str_complete">完成</string>
    <string name="str_skip">跳过</string>
    <string name="str_continue">继续</string>
    <string name="str_exit">退出</string>
    <string name="str_next">下一步</string>
    <string name="str_close">关闭</string>
    <string name="str_setting">设置</string>
    <string name="str_login">登录</string>
    <string name="str_to_setting">去设置</string>
    <string name="str_click_consent">点击“开始配置”代表你同意</string>
    <string name="str_privacy">《隐私政策》</string>
    <string name="str_and">&#160;和&#160;</string>
    <string name="network_disconnect">网络已断开</string>
    <string name="toast_networkIsExceptional">当前网络存在异常</string>
    <string name="toast_serverNoResponse">请检查网络是否有异常</string>
    <string name="network_connected">网络已恢复</string>
    <string name="server_noreponse">服务器无响应</string>
    <string name="toast_network_error">网络异常，请检查网络设置</string>
    <string name="network_error">当前网络异常</string>
    <string name="network_error_tip">请检查网络后刷新页面～</string>
    <string name="info_empty">暂无服务信息</string>
    <string name="tip_granted">已授权</string>
    <string name="tip_permission_ungranted">拒绝授权会影响部分功能使用</string>
    <string name="permission_granted">手机权限已获取</string>
    <string name="str_new_version_now">当前有新版本</string>
    <string name="str_title_selected_pic">选择图片</string>
    <string name="str_ssl_error">证书错误</string>
    <string name="tip_agree_protocol">请同意勾选用户协议</string>
    <string name="toast_network_Exception">网络连接异常</string>
    <string name="network_wifi_low">网络连接失败</string>
    <string name="str_retry">重试</string>
    <string name="tip_set_complete">设置完成</string>
    <string name="tip_set_fail">设置失败</string>
    <string name="choose_device_type">选择设备类型</string>
    <string name="str_text_password_no_null">密码不能为空</string>
    <string name="str_loading">正在加载…</string>
    <string name="str_add_success">添加成功</string>
    <string name="str_add_fail">添加失败</string>
    <string name="str_bind_net_error">请确保手机已连接互联网</string>
    <string name="str_searching">搜索中…</string>
    <string name="tip_no_device_found">没有发现新设备</string>
    <string name="str_check_net">请检查网络</string>
    <string name="str_net_exception">网络连接异常，请检查后重试</string>
    <string name="str_server_exception">服务器连接异常，请检查后重试</string>
    <string name="str_btn_try_again">再试一次</string>
    <string name="tip_forbid_by_server">该请求被服务端拒绝</string>
    <string name="str_bind_success">绑定成功</string>
    <string name="str_bind_fail">绑定失败</string>
    <string name="str_dev_binded">该设备已被其他用户绑定</string>
    <string name="str_prompt">开启蓝牙</string>
    <string name="update_app_exception">版本更新异常,请检查网络连接状态是否良好。</string>
    <string name="str_loding_more">加载中</string>
    <string name="tip_no_more_data">没有更多数据了</string>
    <string name="picker_title">选择照片</string>
    <string name="picker_toast_no_permission">请开启拍照权限</string>
    <string name="picker_toast_no_camera">未找到拍照应用。</string>
    <string name="picker_toast_create_dir_error">创建文件目录失败!</string>
    <string name="picker_toast_path_error">文件路径错误</string>
    <string name="picker_toast_limit">选择的图片超出上限</string>
    <string name="notice_unread_message">您有%d条未读消息</string>
    <string name="ipc_setting_detection_day_monday">周一</string>
    <string name="ipc_setting_detection_day_tuesday">周二</string>
    <string name="ipc_setting_detection_day_wednesday">周三</string>
    <string name="ipc_setting_detection_day_thursday">周四</string>
    <string name="ipc_setting_detection_day_friday">周五</string>
    <string name="ipc_setting_detection_day_saturday">周六</string>
    <string name="ipc_setting_detection_day_sunday">周日</string>
    <string name="str_setting_detail">查看详情</string>
    <string name="str_coming_soon">敬请期待</string>
    <string name="str_num_10_thousands">万</string>
    <string name="str_num_100_million">亿</string>
    <string name="str_viewing_house">看房行程</string>
    <!--    sd -->
    <string name="str_take_photo">拍照</string>
    <string name="str_choose_from_album">从相册选择</string>
    <string name="str_no_sd">设备没有SD卡！</string>
    <string name="str_please_open_sd">请允许打操作SDCard！！</string>
    <string name="str_please_open_camera">请允许打开相机！！</string>
    <string name="str_app_download_progress">下载进度</string>

    <string name="str_cannot_bind_wechat">当前未绑定微信</string>
    <string name="str_input_wechat">请输入您的微信号</string>
    <string name="str_start_viewing_date">预约看房</string>

    <!--    星期-->
    <string name="str_monday">一</string>
    <string name="str_tuesday">二</string>
    <string name="str_wednesday">三</string>
    <string name="str_thursday">四</string>
    <string name="str_friday">五</string>
    <string name="str_saturday">六</string>
    <string name="str_sunday">日</string>
    <string name="str_appointment_record">约看记录</string>
    <string name="str_search">搜索</string>
    <string name="str_search_hint">请输入你想找的区域/商圈或办公楼名称</string>
    <string name="str_recommend_house">推荐房源</string>
    <string name="str_nearby_house">附近房源</string>
    <!--    video-->
    <string name="video_play_loading">视频加载中，请稍候</string>
    <string name="str_version_update">版本更新</string>
    <string name="str_switch_id">切换身份</string>
    <string name="str_logout">退出登录</string>
    <string name="str_shanghai">上海</string>
    <string name="video_play_time_00_00">00:00</string>
    <string name="str_text_video">视频</string>
    <string name="str_text_picture">图片</string>
    <string name="str_no_password_login">本机免密登录</string>
    <string name="str_exchange_mobile">换手机</string>
    <string name="str_exchange_wx">换微信</string>
    <string name="str_text_report">举报</string>
    <string name="str_text_line">一 一</string>
    <string name="str_def_time_start_conversation">一 一由你发起沟通</string>
    <string name="str_time_start_conversation">%s由你发起沟通</string>
    <string name="str_text_unknown">未知</string>
    <!--    webView-->
    <string name="webview_cannot_find_page">找不到网页</string>
    <string name="webview_cannot_open_page">网页无法打开</string>
    <string name="str_title_help">帮助与反馈</string>
    <string name="str_title_protocol">隐私条款</string>
    <string name="str_title_about_us">关于我们</string>
    <string name="str_text_right_now_look">立即查看</string>
    <string name="str_click_login_agree_service"><![CDATA[点击登录代表您已阅读并同意<font color=\'#46C3C2\'>服务协议</font>]]></string>
    <string name="str_text_area"><![CDATA[面积<font color=\'#999999\'>&#160;㎡</font>]]></string>
    <string name="str_text_rent"><![CDATA[租金<font color=\'#999999\'>&#160;元/㎡/天</font>]]></string>
    <string name="str_text_workstation"><![CDATA[工位<font color=\'#999999\'>&#160;个</font>]]></string>
    <string name="str_text_rent_month"><![CDATA[租金<font color=\'#999999\'>&#160;元/㎡/月</font>]]></string>
    <string name="tip_input_correct_phone">请输入正确的手机号</string>
    <string name="tip_sms_code_send_success">验证码已发送</string>
    <string name="str_cannot_get_mine_phone">无法获取本机号码</string>
    <string name="str_login_success">登录成功</string>
    <string name="button_agree">同意</string>
    <string name="button_reject">拒绝</string>
    <!--    dialog-->
    <string name="dialog_title_exchange_phone_contacts">是否确认与对方交换手机号？</string>
    <string name="dialog_title_exchange_wechat_contacts">是否确认与对方交换微信？</string>
    <string name="str_copy_phone">复制号码</string>
    <string name="str_call_phone">立即拨打</string>
    <string name="str_copy_wechat">复制微信号</string>
    <string name="str_look_house_time">看房时间：</string>
    <string name="tip_save_fail">保存失败</string>
    <string name="str_unlimited">不限</string>
    <string name="str_business_circle">商圈</string>
    <string name="str_subway">地铁</string>
    <string name="str_more_points">…</string>
    <string name="str_month6_rental">6个月起租</string>
    <string name="str_work_num">工位</string>
    <string name="str_text_characteristic">特色</string>
    <string name="str_all_station">全部站点</string>
    <string name="str_save">保存</string>
    <string name="tip_get_person_exception">获取个人信息异常</string>
    <string name="tip_save_success">保存成功</string>
    <string name="tip_current_newest_version">当前已是最新版本</string>
    <string name="tip_current_no_data">暂无数据</string>
    <string name="tip_current_day_no_data">暂无看房行程</string>
    <string name="str_are_you_sure_to_logout">是否确定退出？</string>
    <string name="tip_get_house_message_fail">获取房源信息失败</string>
    <string name="tip_delete_fail">删除失败</string>
    <string name="tip_delete_success">删除成功</string>
    <string name="tip_go_to_login">请先登录</string>
    <string name="str_query_more_data">查看更多</string>
    <string name="text_net_exception">没有检测到网络 \n 请检查您的手机是否成功连接上网络</string>
    <string name="text_current_no_data">暂无数据</string>
    <string name="text_day_square">/㎡/天</string>
    <string name="button_edit">编辑</string>
    <string name="button_clear">清除</string>
    <string name="str_modify_mobile">修改手机号</string>
    <string name="str_history_contacts">历史联系人</string>
    <string name="str_protocol_service">服务协议</string>
    <string name="str_text_year">年份</string>
    <!--微信-->
    <string name="errcode_success">分享成功</string>
    <string name="errcode_cancel">分享取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="wx_not_install">您还未安装微信客户端</string>
    <string name="wx_str_no_support_pay">当前微信版本不支持支付，请升级到新版本</string>
    <string name="wx_version_no_support_timeline">当前微信版本不支持分享到朋友圈，请升级到新版本</string>
    <string name="str_need_install_wx">您还没有安装微信</string>
    <string name="str_china_telecom">电信</string>
    <string name="str_china_unicom">联通</string>
    <string name="str_china_mobile">移动</string>
    <string name="str_save_publish">保存并发布</string>
    <string name="str_input_nick_name">请输入称呼</string>
    <string name="str_input_job">请输入职位</string>
    <string name="str_button_test">测试</string>
    <string name="str_rmb_unit">¥</string>
    <string name="str_push_close">暂不开启</string>
    <string name="str_push_open">去开启</string>
    <string name="str_loading_fail_to_try">加载失败，请下拉刷新重试</string>
    <string name="str_submit_success">提交成功</string>


    <!--微信支付-->
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_cancel">取消支付</string>
    <string name="pay_error">支付错误</string>
    <string name="pay_exception">支付异常</string>

    <!--支付宝-->
    <string name="pay_with_alipay">支付宝支付 Demo</string>
    <string name="pay_with_alipay_hk">HK 支付宝支付 Demo</string>
    <string name="auth_with_alipay">支付宝授权 Demo</string>
    <string name="web_to_native">网页支付转 native 支付 Demo</string>
    <string name="check_sdk_version">支付宝 SDK 版本</string>
    <string name="pay_failed">支付失败:</string>
    <string name="auth_success">授权成功:</string>
    <string name="auth_failed">授权失败:</string>
    <string name="error_missing_appid_rsa_private">错误: 需要配置 PayDemoActivity 中的 APPID 和 RSA_PRIVATE</string>
    <string name="error_missing_hk_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_HK 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="pay_result">支付结果:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">错误: 需要配置PARTNER |APP_ID| RSA_PRIVATE| TARGET_ID</string>
    <string name="alipay_sdk_version_is">支付宝 SDK 版本:</string>
    <string name="confirm">确定</string>
    <string name="error_missing_h5_pay_url">必须配置需要打开的url 站点，请在PayDemoActivity类的h5Pay中配置</string>
    <string name="error">错误</string>
    <string name="pay_cross_border">境外收单支付 Demo</string>
    <string name="error_missing_global_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_Global 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="payment_inst_hk">付款方: HK</string>
    <string name="payment_inst_cn">付款方: CN</string>
</resources>
