<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_255"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corner_top_left_right_white">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/str_cannot_bind_wechat"
            android:textColor="@color/text_33"
            android:textSize="@dimen/sp_16" />

        <com.officego.commonlib.view.ClearableEditText
            android:id="@+id/et_wechat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_38"
            android:layout_below="@id/tv_title"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginRight="@dimen/dp_14"
            android:layout_marginBottom="@dimen/dp_18"
            android:background="@drawable/button_corner_edge_gray"
            android:hint="@string/str_input_wechat"
            android:lines="1"
            android:paddingStart="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/text_33"
            android:textSize="@dimen/sp_14"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_below="@+id/rl_title"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_corner_left_normal"
            android:text="@string/sm_cancel"
            android:textColor="@color/text_66"
            android:textSize="@dimen/sp_13"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_Confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_corner_right_main"
            android:text="@string/str_confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>