<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_white"
    android:visibility="gone">

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/ic_exception"
        android:drawablePadding="@dimen/dp_4"
        android:text="@string/network_error"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@+id/tv_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center"
        android:text="@string/network_error_tip"
        android:textColor="@color/text_caption"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toTopOf="@+id/btn_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error" />

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="@dimen/dp_160"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_btn_refresh"
        android:text="@string/str_refresh"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip" />

</androidx.constraintlayout.ConstraintLayout>