<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_net"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_112">

    <TextView
        android:id="@+id/tv_net"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_15"
        android:text="网络"
        android:textColor="@color/text_33"
        android:textSize="@dimen/sp_15" />

    <CheckBox
        android:id="@+id/rb_telecom"
        android:layout_width="@dimen/dp_102"
        android:layout_height="@dimen/dp_38"
        android:layout_below="@+id/tv_net"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/button_text_selector"
        android:button="@null"
        android:checked="false"
        android:gravity="center"
        android:text="@string/str_china_telecom"
        android:textColor="@color/text_selector_blue_black" />

    <CheckBox
        android:id="@+id/rb_unicom"
        android:layout_width="@dimen/dp_102"
        android:layout_height="@dimen/dp_38"
        android:layout_below="@+id/tv_net"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/button_text_selector"
        android:button="@null"
        android:checked="false"
        android:gravity="center"
        android:text="@string/str_china_unicom"
        android:textColor="@color/text_selector_blue_black" />

    <CheckBox
        android:id="@+id/rb_mobile"
        android:layout_width="@dimen/dp_102"
        android:layout_height="@dimen/dp_38"
        android:layout_below="@+id/tv_net"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/button_text_selector"
        android:button="@null"
        android:checked="false"
        android:gravity="center"
        android:text="@string/str_china_mobile"
        android:textColor="@color/text_selector_blue_black" />

    <View
        style="@style/marginLeftRight18"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/common_divider"
        android:visibility="visible" />
</RelativeLayout>