<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ctl_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/rl_wx"
        app:layout_constraintTop_toTopOf="parent">

<!--        android:background="@mipmap/ic_mobile_blue_big"-->
        <ImageView
            android:id="@+id/iv_mobile"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_22"
            android:layout_centerHorizontal="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_mobile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/str_exchange_mobile"
            android:textColor="@color/text_66"
            android:textSize="@dimen/sp_12" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_wx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/rl_mobile"
        app:layout_constraintRight_toLeftOf="@id/rl_viewing_date"
        app:layout_constraintTop_toTopOf="parent">

<!--        android:background="@mipmap/ic_wx_exchange"-->
        <ImageView
            android:id="@+id/iv_wx"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_23"
            android:layout_centerHorizontal="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_wx"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/str_exchange_wx"
            android:textColor="@color/text_66"
            android:textSize="@dimen/sp_12" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_viewing_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/rl_wx"
        app:layout_constraintRight_toLeftOf="@id/rl_report"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_date"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/ic_viewing_date_blue_big"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_date"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/str_start_viewing_date"
            android:textColor="@color/text_66"
            android:textSize="@dimen/sp_12" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/rl_viewing_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_report"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_22"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/ic_report_blue_big"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_report"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/str_text_report"
            android:textColor="@color/text_66"
            android:textSize="@dimen/sp_12" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>